--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
+    "react-spring": "^9.4.5-beta.1",
+    "react-spring-bottom-sheet": "^3.4.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
