--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^5.3.0",
     "react-image-gallery": "^1.3.0",
     "react-kakao-maps-sdk": "^1.1.27",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-simple-image-slider": "^2.4.1",
